--- a/index.html
+++ b/index.html
@@ -9,13 +9,12 @@
 <body>
   <canvas id="c"></canvas>
 
-  <!-- Verse overlay -->
   <div id="verseOverlay" class="overlay hidden" aria-hidden="true">
     <div class="card">
       <div class="cardTitle" id="cardTitle">It’s okay, try again.</div>
 
       <div class="cardSub">
-        <span id="dailyTag">Daily verse</span> • <span id="verseRef">Verse</span>
+        <span id="dailyTag">Daily verse</span> • <span id="verseRef">Verse</span> • <span id="verseTr">WEB</span>
       </div>
 
       <div class="resultRow">
@@ -23,13 +22,13 @@
         <button id="shareBtn" class="btnSecondary">Share</button>
       </div>
 
-      <div id="verseScroll" class="scrollBox">
+      <div class="scrollBox">
         <div id="verseText" class="verseText"></div>
         <div class="fadeBottom"></div>
       </div>
 
       <div class="unlockRow">
-        <div id="unlockHint" class="hint">Scroll to the end to continue</div>
+        <div id="unlockHint" class="hint">Please wait 5s…</div>
         <button id="continueBtn" class="btn" disabled>Continue</button>
       </div>
 
