Replace 'Share' button with 'Send to your friends!'

--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
 
       <div class="resultRow">
         <div class="resultText" id="resultText">Score: 0 • Best: 0</div>
-        <button id="shareBtn" class="btnSecondary">Share</button>
+        <button id="sendBtn" class="btnSecondary">Send to your friends!</button>
       </div>
 
       <div class="scrollBox">
         <div id="verseText" class="verseText"></div>
-        <div class="fadeBottom"></div>
       </div>
 
       <div class="unlockRow">
-        <div id="unlockHint" class="hint">Please wait 5s…</div>
         <button id="continueBtn" class="btn" disabled>Continue</button>
+        <div id="unlockHint" class="hint right">Please wait 5s…</div>
       </div>
 
       <div class="shareStatus" id="shareStatus"></div>
