Update daily verse text and button visibility

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="cardTitle" id="cardTitle">It’s okay, try again.</div>
 
       <div class="cardSub">
-        <span id="dailyTag">Daily verse</span> • <span id="verseRef">Verse</span> • <span id="verseTr">WEB</span>
+        <span id="dailyTag">Here’s your daily verse 👍🏼</span> • <span id="dateText">Jan 1, 2026</span>
       </div>
 
       <div class="resultRow">
@@ -27,8 +27,9 @@
       </div>
 
       <div class="unlockRow">
-        <button id="continueBtn" class="btn" disabled>Continue</button>
+        <div class="spacer"></div>
         <div id="unlockHint" class="hint right">Please wait 5s…</div>
+        <button id="continueBtn" class="btn rightBtn hiddenBtn" disabled>Continue</button>
       </div>
 
       <div class="shareStatus" id="shareStatus"></div>
