--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- index.html -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -43,10 +44,6 @@
       <div class="shareStatus" id="shareStatus"></div>
     </div>
   </div>
-
-  <script src="game.js"></script>
-</body>
-</html>
 
   <script src="game.js"></script>
 </body>
