--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Liiiiiiight</title>
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
 </head>
 <body>
   <!-- Always-visible header (logo only) -->
